objects/SFDC_Industry_Vertical__mdt.object
<CustomObject>
    <description>Salesforce industry specific verticals available for running transition assessments and upgrade automation</description>
    <fields>
        <fullName>Description_Label__c</fullName>
        <label>Description Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Label__c</fullName>
        <label>Display Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Name__c</fullName>
        <label>Icon_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <referenceTo>SFDC_Industry__mdt</referenceTo>
        <relationshipLabel>SFDC Industry Vertical</relationshipLabel>
        <relationshipName>SFDC_Industry_Vertical</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SFDC Industry Vertical</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Industry__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Label__c</columns>
        <columns>Description_Label__c</columns>
        <columns>Icon_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SFDC Industry Vertical</pluralLabel>
</CustomObject>